style: fixing the button alignment

--- a/style.css
+++ b/style.css
@@ -15,91 +15,45 @@ hr {
     margin: 2rem 0rem;
 }
 
-.container {
-    padding: 0.5rem 1rem;
+/** spaces **/
+
+.margin-md {
+    margin: 2rem;
 }
 
-.container-fluid{
+/** container **/
+.container {
     padding: 0rem 1rem;
 }
 
 .container-center {
-    max-width: 700px;
+    max-width: 600px;
     margin: auto;
-    margin-bottom: 1rem;
 }
 
-.container-center p {
-    padding-left: 0.5rem;
-}
-
-.container-center span{
-    color: var(--primary-color);
-    font-weight: bold;
-    margin-top: 2rem;
-}
-
-/* links */
-
+/** links **/
 .link {
+    box-sizing: border-box;
     text-decoration: none;
     padding: 0.5rem 1rem;
-    margin: 5px;
-    margin-top: 1rem;
-    margin-bottom: 1rem;
 }
 
 .llnk-primary {
     background-color: var(--primary-color);
     border-radius: 0.5rem;
     color: white;
+    display: block;
+    max-width: 140px;
+    margin: 1rem 1rem 1rem 0rem;
 }
 
 .llnk-secondary {
     color: var(--primary-color);
-    border: 1px solid var(--primary-color);
     border-radius: 0.5rem;
-    color: var(--primary-color);
-}
-
-/* lists */
-
-.list-non-bullet {
-    list-style: none;
-}
-
-/* .list-non-bullet small {
+    border: 1px solid var(--primary-color);
     display: block;
-    padding-bottom: 2rem;
-} */
-
-.list-non-bullet span {
-    padding-left: 1rem;
-    font-weight: bold;
-}
-
-.list-item-inline {
-    display: inline;
-    padding: 0rem 1rem;
-    color: white;
-}
-
-.technologies {
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-}
-
-.projects {
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-}
-
-.blogs {
-    display: flex;
-    align-items: center;
-    flex-direction: column;
+    max-width: 170px;
+    margin: 0rem 1rem 1rem 0rem;
 }
 
 .border-bottom li {
@@ -107,41 +61,73 @@ hr {
     margin: 2rem 35rem;
 }
 
-/* navigation */
+/** look into BEM naming convention for CSS **/
+
+/** lists **/
+
+.list-non-bullet {
+    list-style: none;
+    padding-inline-start: 0px;
+}
+
+.list-item-inline {
+    display: inline;
+    padding: 0rem 0.5rem;
+}
+
+/** navigation **/
 
 .navigation {
     background-color: var(--primary-color);
+    color: white;
     padding: 1rem;
-    border-bottom-left-radius: 1rem 
+    border-bottom-left-radius: 1rem;
 }
 
-.nav-brand {
+.navigation .nav-brand {
     font-weight: bold;
+}
+
+.nav-brand a {
+    text-decoration: none;
+    color: inherit;
+}
+
+.navigation .nav-pills {
+    text-align: right;
 }
 
 .navigation .link {
     color: white;
 }
 
-.nav-pills {
-    text-align: right;
-}
-
 .navigation .link-active {
     font-weight: bold;
 }
 
-/* header */
+/** header **/
 
 .hero {
     padding: 2rem;
+    padding-top: 5rem;
+
 }
 
-.hero-img {
-    max-width: 400px;
+.hero .hero-img {
+    max-width: 80%;
+    width: 350px;
     display: block;
     margin: auto;
-    padding-top: 2rem;
+}
+
+.hero .hero-heading {
+    text-align: center;
+    padding-top: 1rem;
+    color: var(--dark-gray);
+}
+
+.hero .hero-heading .heading-inverted {
+    color: var(--primary-color);
 }
 
 .hero-h2 {
@@ -154,36 +140,33 @@ hr {
     color: var(--primary-color);
 }
 
-/* section */
+/** sections **/
 
 .section {
-    padding: 1rem;
+    padding: 2rem;
 }
 
-.section h4{
+.section h1 {
     text-align: center;
-}
 
-.span-date {
-    padding: 0rem 0.5rem;
 }
 
 .ow {
     background-color: var(--light-gray);
 }
 
-/* footer */
+/** footers **/
 
 .footer {
     background-color: var(--primary-color);
-    padding: 2rem;
+    padding: 4rem 1rem;
+    text-align: center;
     color: white;
     border-top-right-radius: 1rem;
-    text-align: center;
 }
 
 .footer .link {
-    color: var(--light-gray);
+    color: white
 }
 
 .footer .footer-header {
@@ -192,5 +175,15 @@ hr {
 }
 
 .footer ul {
-    padding-inline-start: 0;
+    padding-inline-start: 0px;
+}
+
+/** projects **/
+.showcase-list {
+    padding: 2rem;
+}
+
+/** blogs **/
+.showcase-blog {
+    padding-bottom: 6rem;
 }
